Update1 index.html

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     <header class="hero-section">
         <div class="hero-content">
             <h1>Welcome, I'm Arunesh E</h1>
-            <p>Specializing in Electric Vehicles and Battery Technology</p>
+            <p>UnderGrad @ SASTRA</p>
             <nav>
-                <a href=.about-section class="cta-button">About Me</a>
-                <a href=.contact-section class="cta-button">Contact</a>
+                <a href="#about" class="cta-button">About Me</a>
+                <a href="#contact" class="cta-button">Contact</a>
             </nav>
         </div>
     </header>
@@ -45,7 +45,25 @@
                     <p>I love to explore new technologies and apply creative solutions to problems in the field of EVs and batteries.</p>
                 </div>
             </div>
-        </div>
+
+            <!-- Certifications Box -->
+            <div class="certifications-box">
+                <h2>Certifications</h2>
+                <ul>
+                    <li><b style="font-size: 18pt;">Semiconductor Characterization</b> - Ministry of Heavy Industries, GOI</li>
+                    <p style="font-style: italic;">In this course, I developed skills in Semiconductor fabrication, MATLAB etc.</p>
+                </ul>
+            </div>
+
+            <!-- Online Courses Box -->
+            <div class="courses-box">
+                <h2>Online Courses</h2>
+                <ul>
+                    <li><b style="font-size: 18pt;">Introduction to Electric Vehicles </b>- Great learning platform.</li>
+                    <li><b style="font-size: 18pt;">Battery Technology in Electric Vehicles </b>- Great learning platform.</li>
+                    <li><b style="font-size: 18pt;">Front End Development </b>- CSS - Great learning platform.</li>
+                </ul>
+            </div>
     </section>
 
     <!-- Contact Section -->
