--- a/index.html
+++ b/index.html
@@ -5,13 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Arunesh | Portfolio</title>
     <link rel="stylesheet" href="style2.css">
-    <style>
-        html {
-            scroll-behavior: smooth;
-        }
-    </style>
+    <link rel="icon" href="icon.png">
 </head>
 <body>
+    <script src="script.js"></script>
     <!-- Hero Section -->
     <header class="hero-section">
         <div class="hero-content">
@@ -85,5 +82,6 @@
             </div>
         </div>
     </section>
+    <footer align="center"><h4>For better Experience, view in Desktop site</h4></footer>
 </body>
 </html>
