--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
             <h1>Welcome, I'm Arunesh E</h1>
             <p>UnderGrad @ SASTRA</p>
             <nav>
-                <a href="#about" class="cta-button">About Me</a>
-                <a href="#contact" class="cta-button">Contact</a>
+                <a href="https://arunesh333.github.io/portfolio/#about" class="cta-button">About Me</a>
+                <a href="https://arunesh333.github.io/portfolio/#contact" class="cta-button">Contact</a>
             </nav>
         </div>
     </header>
