--- a/index.html
+++ b/index.html
@@ -3,85 +3,63 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Arunesh | Portfolio</title>
-    <link rel="stylesheet" href="style2.css">
-    <link rel="icon" href="icon.png">
+    <title>Arunesh's Portfolio</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <script src="script.js"></script>
-    <!-- Hero Section -->
-    <header class="hero-section">
-        <div class="hero-content">
-            <h1>Welcome, I'm Arunesh E</h1>
-            <p>UnderGrad @ SASTRA</p>
-            <nav>
-                <a href="https://arunesh333.github.io/portfolio/#about" class="cta-button">About Me</a>
-                <a href="https://arunesh333.github.io/portfolio/#contact" class="cta-button">Contact</a>
-            </nav>
-        </div>
-    </header>
-
-    <!-- About Section -->
-    <section id="about" class="about-section">
-        <div class="container">
-            <h2>About Me</h2>
-            <div class="about-content">
-                <div class="about-card">
-                    <i class="fas fa-graduation-cap"></i>
-                    <h3 style="font-size: 20pt;">Student</h3>
-                    <p>I'm an undergraduate student with a passion for research about Electric Vehicles and Battery Technology.</p>
-                </div>
-                <div class="about-card">
-                    <i class="fas fa-code"></i>
-                    <h3 style="font-size: 20pt;">Developer</h3>
-                    <p>I have experience in HTML, CSS, JavaScript, and Java, and I'm practicing myself to become a Full Stack Developer.</p>
-                </div>
-                <div class="about-card">
-                    <i class="fas fa-lightbulb"></i>
-                    <h3 style="font-size: 20pt;">Innovator</h3>
-                    <p>I love to explore new technologies and apply creative solutions to problems in the field of EVs and batteries.</p>
-                </div>
-            </div>
-
-            <!-- Certifications Box -->
-            <div class="certifications-box">
-                <h2>Certifications</h2>
-                <ul>
-                    <li><b style="font-size: 18pt;">Semiconductor Characterization</b> - Ministry of Heavy Industries, GOI</li>
-                    <p style="font-style: italic;">In this course, I developed skills in Semiconductor fabrication, MATLAB etc.</p>
-                </ul>
-            </div>
-
-            <!-- Online Courses Box -->
-            <div class="courses-box">
-                <h2>Online Courses</h2>
-                <ul>
-                    <li><b style="font-size: 18pt;">Introduction to Electric Vehicles </b>- Great learning platform.</li>
-                    <li><b style="font-size: 18pt;">Battery Technology in Electric Vehicles </b>- Great learning platform.</li>
-                    <li><b style="font-size: 18pt;">Front End Development </b>- CSS - Great learning platform.</li>
-                </ul>
-            </div>
-    </section>
-
-    <!-- Contact Section -->
-    <section id="contact" class="contact-section">
-        <div class="container">
-            <h2>Contact Me</h2>
-            <form action="#" method="POST">
-                <input type="text" name="name" placeholder="Your Name" required>
-                <input type="email" name="email" placeholder="Your Email" required>
-                <input type="tel" name="phone" placeholder="Your Phone Number" required>
-                <textarea name="message" placeholder="Your Message" required></textarea>
-                <button type="submit">Send Message</button>
-            </form>
-            <div class="contact-info-box">
-                <p><strong>Phone: </strong><a href="tel:+9789834211">9789834211</a></p>
-                <p><strong>LinkedIn: </strong><a href="https://www.linkedin.com/in/arunesh33/" target="_blank">Click here</a></p>
-                <p><strong>Mail-Id: </strong><a href="mailto:2005arunesh@gmail.com">2005arunesh@gmail.com</a></p>
-                <p><strong>Address: </strong>44/4, Sabhapathi Avenue, Srinivasan Pillai Road, Thanjavur, Tamil Nadu, India</p>
+    <div class="container">
+        <div class="main">
+            <div class="app-grid">
+                <a href="assets/Resume.pdf" class="app-tile" target="_blank">
+                    <div class="icon"><img src="assets/adobe.png" alt="pdf_viewer" class="logo"></div>
+                    <span>Resume</span>
+                </a>
+                <a href="#personal" class="app-tile">
+                    <div class="icon"><img src="assets/Personax.png" alt="Personax_logo" class="logo"></div>
+                    <span>PersonaX</span>
+                </a>
+                <a href="#eduactional" class="app-tile">
+                    <div class="icon"><img src="assets/Eduverse.png" alt="Eduverse_logo" class="logo"></div>
+                    <span>EduVerse</span>
+                </a>
+                <a href="#skills" class="app-tile">
+                    <div class="icon"><img src="assets/Skillset.png" alt="Skillhub_logo" class="logo"></div>
+                    <span>SkillHub</span>
+                </a>
+                <a href="#projects" class="app-tile">
+                    <div class="icon"><img src="assets/project.png" alt="workfolio" class="logo"></div>
+                    <span>WorkFolio</span>
+                </a>
+                <a href="#courses" class="app-tile">
+                    <div class="icon"><img src="assets/course.png" alt="Courses" class="logo"></div>
+                    <span>Coursera</span>
+                </a>
+                <a href="https://www.linkedin.com/in/arunesh33/" class="app-tile" target="_blank">
+                    <div class="icon"><img src="assets/linkedin.png" alt="linkedin" class="logo"></div>
+                    <span>LinkedIn</span>
+                </a>
+                <a href="https://github.com/arunesh333" class="app-tile" target="_blank">
+                    <div class="icon"><img src="assets/gituhub.png" alt="github" class="logo"></div>
+                    <span>GitHub</span>
+                </a>
+                <a href="https://www.instagram.com/arunesh_33/" class="app-tile" target="_blank">
+                    <div class="icon"><img src="assets/insta.png" alt="Instagram" class="logo"></div>
+                    <span>Instagram</span>
+                </a>
             </div>
         </div>
-    </section>
-    <footer align="center"><h4>For better Experience, view in Desktop site</h4></footer>
+        <div class="bottom">
+            <a href="tel:+919789834211" class="dock-item">
+                <img src="assets/phone.png" alt="Phone" class="logo">
+            </a>
+            <a href="mailto:2005arunesh@gmail.com" class="dock-item">
+                <img src="assets/gmail.png" alt="Gmail" class="logo1">
+            </a>
+            <a href=" https://wa.me/+919789834211" class="dock-item" target="_blank">
+                <img src="assets/wp.png" alt="whatsapp" class="logo">
+            </a>
+        </div>
+    </div>
 </body>
 </html>
+<a href="tel:+919789834211"></a>
