--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Arunesh's Portfolio</title>
+    <link rel="icon" href="assets/title.png">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -14,7 +15,7 @@
                     <div class="icon"><img src="assets/adobe.png" alt="pdf_viewer" class="logo"></div>
                     <span>Resume</span>
                 </a>
-                <a href="#personal" class="app-tile">
+                <a href="personal.html" class="app-tile">
                     <div class="icon"><img src="assets/Personax.png" alt="Personax_logo" class="logo"></div>
                     <span>PersonaX</span>
                 </a>
