--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <div class="icon"><img src="assets/Personax.png" alt="Personax_logo" class="logo"></div>
                     <span>PersonaX</span>
                 </a>
-                <a href="#eduactional" class="app-tile">
+                <a href="edu.html" class="app-tile">
                     <div class="icon"><img src="assets/Eduverse.png" alt="Eduverse_logo" class="logo"></div>
                     <span>EduVerse</span>
                 </a>
