--- a/edu.html
+++ b/edu.html
@@ -13,34 +13,42 @@
             <h1>EduVerse</h1>
          </div>
          <div class="stg">
-            <h2>Class 10</h2>
-            <p>2020</p>
-            <h4>Central Board of Secondary Education</h4>
-            <h4>Blossom Public School, Thanjavur</h4>
+            <details>
+               <summary><h2>Class 10</h2></summary>
+               <p>2020</p>
+               <h5>Central Board of Secondary Education</h5>
+               <h4>Blossom Public School, Thanjavur</h4>
             <div class="mark">
                <div class="bar1"></div>
                <div class="percentage">85.8%</div>
             </div>
+         </details>
          </div>
          <div class="stg">
-            <h2>Class 12</h2>
+            <details>
+               <summary><h2>Class 12</h2></summary>
             <p>2022</p>
-            <h4>Central Board of Secondary Education</h4>
+            <h5>Central Board of Secondary Education</h5>
             <h4>Blossom Public School, Thanjavur</h4>
             <div class="mark">
                <div class="bar2"></div>
                <div class="percentage">78.8%</div>
             </div>
+            </details>
+            
          </div>
          <div class="stg">
-            <h2>Under Graduation</h2>
-            <p>2022 - 2026</p>
-            <h5>B.tech Electrical and Electronics Engineering (Smart Grid & Electric Vehicles)</h5>
-            <h4>SASTRA Deemed University, Thanjavur</h4>
-            <div class="mark">
+            <details>
+               <summary><h2>Under Graduation</h2></summary>
+               <p>2022 - 2026</p>
+               <h5>B.Tech Electrical and Electronics Engineering (Smart Grid & Electric Vehicles)</h5>
+               <h4>SASTRA Deemed University, Thanjavur</h4>
+               <div class="mark">
                <div class="bar3"></div>
                <div class="percentage">4.5495/10</div>
             </div>
+            </details>
+            
          </div>
       </div>
    </body>
