--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <div class="icon"><img src="assets/Eduverse.png" alt="Eduverse_logo" class="logo"></div>
                     <span>EduVerse</span>
                 </a>
-                <a href="#skills" class="app-tile">
+                <a href="skill.html" class="app-tile">
                     <div class="icon"><img src="assets/Skillset.png" alt="Skillhub_logo" class="logo"></div>
                     <span>SkillHub</span>
                 </a>
